@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2025-04-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-25T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -49,6 +44,11 @@
     },
     {
       "timestamp": "2025-05-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
